--- a/src/pages/user/index.html
+++ b/src/pages/user/index.html
@@ -54,8 +54,8 @@
 
             <a href="#" id="user-avatar">
                 <div>
-                    <p id="user-name-avatar">Roberto Doe</p>
-                    <span id="user-email-avatar">robertodoe@gmail.com</sp>
+                    <p id="user-name-header">Roberto Doe</p>
+                    <span id="user-email-header">robertodoe@gmail.com</sp>
                 </div>
                 <div id="separator"></div>
                 <img src="../../assets/img/user-image.png" alt="Imagem do Usuário">
@@ -66,8 +66,8 @@
                 <div id="user-special">
                     <img src="../../assets/img/user-image-full-size.png" alt="Foto do Usuário">
                     <div class="user-info-text">
-                        <p>Roberto Doe</p>
-                        <span>robertodoe@gmail.com</sp>
+                        <p id="user-name-avatar">Roberto Doe</p>
+                        <span id="user-email-avatar">robertodoe@gmail.com</sp>
                     </div>
                 </div>
 
